<resources>
    <string name="app_name">My Favourite Places</string>
    <string name="home">Home</string>
    <string name="favourites">Favourites</string>
    <string name="map">Map</string>
    <string name="account">Account</string>
    <string name="email">Email</string>
    <string name="login">Sign In</string>
    <string name="signup">Sign Up</string>
    <string name="password">Password</string>
    <string name="continueWithoutLogin">Continue without login</string>
    <string name="errorLogIn">User or password incorrect, please try again</string>
    <string name="errorSignUp">Unable to create user, please try again</string>
    <string name="logout">Sign Out</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="name">Name</string>
    <string name="location">Location</string>
    <string name="title">Title</string>
    <string name="description">Description</string>
    <string name="review">Review</string>
    <string name="image">Image</string>
    <string name="lat">Latitude</string>
    <string name="lng">Longitude</string>
    <string name="category">Category</string>
    <string name="sharePublic">Public</string>
    <string name="sharePrivate">Private</string>
    <string name="author">Author</string>
    <string name="mustBeSignedIn">You must be signed in to add favourites</string>
    <string name="saveFavourite">Save as favourite</string>
    <string name="editFavourite">Edit favourite</string>
    <string name="deleteFavourite">Delete favourite</string>
    <string name="myAccount">My Account</string>

    <string name="warning">Warning</string>
    <string name="deleteDesc">Do you really want to delete this item?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="addFavourite">Add Favourite</string>
    <string name="next">Next</string>
    <string name="addLocation">Add Location</string>
    <string name="addReview">Add Review</string>
    <string name="skip">Skip</string>
    <string name="summary">Summary</string>
    <string name="makePublic">Make public</string>
    <string name="reviewTitle">Review title</string>
    <string name="savedPlace">Favourite place saved</string>
    <string name="deleteAccount">Delete Account</string>
    <string name="deleteAccountDesc">Do you really want to delete your account? This can not be undone.</string>
    <string name="accountDeleted">Your account has been deleted.</string>
    <string name="userCollectionDeleted">You collection has been deleted.</string>
    <string name="accountSaved">Account info saved.</string>
    <string name="welcome">Welcome to My favourite places!</string>
    <string name="accountLoggedIn">Email: %1$s</string>
    <string name="appInfo">Here you can add your own favourite places and see others shared favourite places.</string>
    <string name="errorImageUpload">There was an error uploading the image, try agin.</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>