<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".LoginFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:importantForAutofill="auto">

    <Button
        android:id="@+id/btnLogin"
        style="@style/Widget.AppCompat.Button"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="-12dp"
        android:layout_marginTop="48dp"
        android:text="@string/login"
        android:enabled="false"
        app:layout_constraintStart_toStartOf="@+id/etvPassword"
        app:layout_constraintTop_toBottomOf="@+id/etvPassword"
        />

    <EditText
        android:id="@+id/etvUser"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_marginTop="140dp"
        android:ems="10"
        android:hint="@string/email"
        android:inputType="text"
        android:autofillHints="emailAddress"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/etvPassword"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_marginTop="24dp"
        android:ems="10"
        android:inputType="textPassword"
        android:hint="@string/password"
        android:autofillHints="password"
        app:layout_constraintEnd_toEndOf="@+id/etvUser"
        app:layout_constraintStart_toStartOf="@+id/etvUser"
        app:layout_constraintTop_toBottomOf="@+id/etvUser" />

    <Button
        android:id="@+id/btnSignup"
        style="@style/Widget.AppCompat.Button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="-12dp"
        android:text="@string/signup"
        android:enabled="false"
        app:layout_constraintEnd_toEndOf="@+id/etvPassword"
        app:layout_constraintTop_toTopOf="@+id/btnLogin" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

</layout>