<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddFavouritePartOneFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/appBarLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <com.google.android.material.appbar.MaterialToolbar
                android:id="@+id/topAddPart1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:minHeight="?attr/actionBarSize"
                app:navigationIcon="@drawable/baseline_arrow_back_24"
                app:title="@string/addFavourite" />

        </com.google.android.material.appbar.AppBarLayout>

        <EditText
            android:id="@+id/etvAddTitle"
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:layout_marginTop="12dp"
            android:ems="10"
            android:hint="@string/title"
            android:inputType="text"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/appBarLayout" />

        <EditText
            android:id="@+id/etvAddDescription"
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:layout_marginTop="12dp"
            android:ems="10"
            android:hint="@string/description"
            android:inputType="text"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/etvAddTitle" />

        <Spinner
            android:id="@+id/spCategory"
            android:layout_width="200dp"
            android:layout_height="48dp"
            android:layout_marginTop="12dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/etvAddDescription" />

        <ImageView
            android:layout_width="0dp"
            android:layout_height="150dp"
            android:id="@+id/imSelectedImage"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/spCategory"
            android:src="@drawable/baseline_camera_alt_24"
            android:layout_margin="16dp"
            />


        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/fabAddImage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:layout_margin="16dp"
            android:src="@drawable/baseline_camera_alt_24"
            app:layout_constraintBottom_toBottomOf="@id/imSelectedImage"
            app:layout_constraintEnd_toEndOf="@id/imSelectedImage"/>

        <com.google.android.material.divider.MaterialDivider
            android:id="@+id/divider"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            app:dividerInsetEnd="16dp"
            app:dividerInsetStart="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imSelectedImage" />

        <Button
            android:id="@+id/btnAddPartOneNext"
            style="@style/Widget.AppCompat.Button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:text="@string/next"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/btnAddPartOneCancel"
            app:layout_constraintTop_toBottomOf="@+id/divider" />

        <Button
            android:id="@+id/btnAddPartOneCancel"
            style="@style/Widget.MaterialComponents.Button.OutlinedButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:text="@string/cancel"
            app:layout_constraintEnd_toStartOf="@+id/btnAddPartOneNext"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/divider" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</FrameLayout>