<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AccountFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


        <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/appBarLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <com.google.android.material.appbar.MaterialToolbar
                android:id="@+id/topAppBar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:minHeight="?attr/actionBarSize"
                app:menu="@menu/account_menu"

                app:title="@string/myAccount" />

        </com.google.android.material.appbar.AppBarLayout>

        <ImageView

            android:id="@+id/imAccountImage"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="32dp"
            android:src="@drawable/outline_account_circle_24"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/appBarLayout" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/fabAddImageAccount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:src="@drawable/baseline_camera_alt_24"
            app:layout_constraintBottom_toBottomOf="@+id/imAccountImage"
            app:layout_constraintEnd_toEndOf="@+id/imAccountImage"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"/>

        <EditText
            android:id="@+id/etcAccountName"
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="12dp"
            android:ems="10"
            android:hint="@string/name"
            android:inputType="text"
            app:layout_constraintStart_toEndOf="@id/imAccountImage"
            app:layout_constraintTop_toTopOf="@+id/imAccountImage" />

        <EditText
            android:id="@+id/etvAccountLocation"
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:layout_marginTop="24dp"
            android:ems="10"
            android:hint="@string/location"
            android:inputType="text"
            app:layout_constraintEnd_toEndOf="@+id/etcAccountName"
            app:layout_constraintStart_toStartOf="@+id/etcAccountName"
            app:layout_constraintTop_toBottomOf="@+id/etcAccountName" />
        <com.google.android.material.divider.MaterialDivider
            android:id="@+id/accountDivider"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/imAccountImage"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_margin="16dp"
            app:dividerInsetEnd="16dp"
            app:dividerInsetStart="16dp"
            />

        <Button
            android:id="@+id/btnSave"
            style="@style/Widget.AppCompat.Button"
            android:layout_width="100dp"
            android:layout_height="48dp"
            android:layout_marginBottom="24dp"
            android:text="@string/save"
            app:layout_constraintTop_toBottomOf="@+id/accountDivider"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="24dp"/>

        <TextView
            android:id="@+id/tvAccount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginBottom="12dp"
            android:text="TextView"
            app:layout_constraintTop_toBottomOf="@+id/appBarLayout"
            app:layout_constraintStart_toStartOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

</FrameLayout>